--- a/spectHR/notebooks/SpectHR.ipynb
+++ b/spectHR/notebooks/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3931d91536f4ce0ab988528cd761ab0",
+       "model_id": "e056823a462f431d98586c726cbb5696",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,6 +99,9 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "os.chdir(\"C:\\\\Users\\\\P154492\\\\Documents\\\\GitHub\\\\spectHR\")\n",
     "import spectHR as cs\n",
     "# include matplotlib **only** to set the style\n",
     "import matplotlib.pyplot as plt\n",
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -163,8 +166,9 @@
    },
    "outputs": [],
    "source": [
-    "DataSet = cs.SpectHRDataset(\"SUB_013.xdf\", use_webdav=True, reset = False, flip = 'auto')\n",
+    "DataSet = cs.SpectHRDataset(\"POLARDATA.txt\", use_webdav=True, reset = True, flip = True)\n",
     "DataSet = cs.borderData(DataSet)\n",
+    "DataSet.ecg = DataSet.ecg.slicetime(2, np.Inf)\n",
     "DataSet = cs.filterECGData(DataSet, {\"filterType\": \"highpass\", \"cutoff\": 1})\n",
     "if not hasattr(DataSet, 'RTops'):\n",
     "    DataSet = cs.calcPeaks(DataSet)"
@@ -198,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -221,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "973789154ee94f789ac2159c79a70091",
+       "model_id": "f6a13508f79e4ef3bb84d93e2e43c937",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57c10d24-b3ee-460a-b177-60de06412ab2",
+   "id": "fb07c8fc-2a41-4ae8-8e5d-df9da8b92f94",
    "metadata": {},
    "outputs": [],
    "source": []
