--- a/spectHR/notebooks/SpectHR.ipynb
+++ b/spectHR/notebooks/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e056823a462f431d98586c726cbb5696",
+       "model_id": "4754250244984e838106c009f6b48b8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,9 +99,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "os.chdir(\"C:\\\\Users\\\\P154492\\\\Documents\\\\GitHub\\\\spectHR\")\n",
     "import spectHR as cs\n",
     "# include matplotlib **only** to set the style\n",
     "import matplotlib.pyplot as plt\n",
@@ -145,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -166,12 +163,50 @@
    },
    "outputs": [],
    "source": [
-    "DataSet = cs.SpectHRDataset(\"POLARDATA.txt\", use_webdav=True, reset = True, flip = True)\n",
-    "DataSet = cs.borderData(DataSet)\n",
-    "DataSet.ecg = DataSet.ecg.slicetime(2, np.Inf)\n",
-    "DataSet = cs.filterECGData(DataSet, {\"filterType\": \"highpass\", \"cutoff\": 1})\n",
-    "if not hasattr(DataSet, 'RTops'):\n",
-    "    DataSet = cs.calcPeaks(DataSet)"
+    "import ipywidgets as widgets\n",
+    "import glob\n",
+    "\n",
+    "xdffiles = glob.glob(\"*.xdf\")\n",
+    "rawfiles = glob.glob(\"*.txt\")\n",
+    "\n",
+    "if \"TODO.txt\" in rawfiles:\n",
+    "    rawfiles.remove(\"TODO.txt\")\n",
+    "\n",
+    "fileselector = widgets.Select(\n",
+    "    options = xdffiles + rawfiles,\n",
+    "    value=xdffiles[0],\n",
+    "    description='File:',\n",
+    "    disabled=False,\n",
+    "    rows=10,\n",
+    ")\n",
+    "\n",
+    "def preProc(name):\n",
+    "    data = cs.SpectHRDataset(name , reset = False, flip = 'auto')\n",
+    "    data.ecg = data.ecg.slicetime(4, 1000000)\n",
+    "    data = cs.borderData(data)\n",
+    "    data = cs.filterECGData(data, {\"filterType\": \"highpass\", \"cutoff\": 1})\n",
+    "    return data\n",
+    "    \n",
+    "myApp = widgets.Output()\n",
+    "dataSet = {name: preProc(name) for name in xdffiles + rawfiles} \n",
+    "\n",
+    "DataSet = dataSet[xdffiles[0]]\n",
+    "\n",
+    "def on_file_change(change):\n",
+    "    global DataSet\n",
+    "    if change['type'] == 'change' and change['name'] == 'value':\n",
+    "        dataSet[change['old']] = DataSet\n",
+    "        name = change['new']\n",
+    "        DataSet = dataSet[name]\n",
+    "    \n",
+    "        if not hasattr(DataSet, 'RTops'):\n",
+    "            DataSet = cs.calcPeaks(DataSet)\n",
+    "            \n",
+    "        with myApp:\n",
+    "            myApp.clear_output()\n",
+    "            display(cs.HRApp(DataSet))\n",
+    "\n",
+    "fileselector.observe(on_file_change, names='value')"
    ]
   },
   {
@@ -202,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -225,12 +260,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6a13508f79e4ef3bb84d93e2e43c937",
+       "model_id": "f98852d32a5a468d8ea62a43a3d34132",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Tabs(children=[Tab(children=['PreProcessing'], layout=None), Tab(children=['Poincare'], layout=None), Tab(chil…"
+       "Select(description='File:', options=('SUB_002.xdf', 'SUB_013.xdf', 'SUB_022.xdf', 'POLARDATA.txt'), rows=10, v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a6df767fea24a5e83fbbee927295907",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
       ]
      },
      "metadata": {},
@@ -238,13 +287,14 @@
     }
    ],
    "source": [
-    "App = cs.HRApp(DataSet)"
+    "display(fileselector)\n",
+    "display(myApp)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb07c8fc-2a41-4ae8-8e5d-df9da8b92f94",
+   "id": "dbc01754-27fd-4c3c-a7c2-3fcb53b84b91",
    "metadata": {},
    "outputs": [],
    "source": []
