--- a/SpectHR.ipynb
+++ b/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -82,7 +82,22 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "932777f8f73c4f709a2237c3132ca1fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import spectHR as cs\n",
     "# include matplotlib **only** to set the style\n",
@@ -130,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -166,11 +181,11 @@
     "\n",
     "# Create a file selection widget\n",
     "fileselector = widgets.Select(\n",
-    "    options=xdffiles + rawfiles,  # Available file options\n",
-    "    value=xdffiles[0] if xdffiles else None,  # Default selection (first .xdf file if available)\n",
-    "    description='File:',\n",
-    "    disabled=False,\n",
-    "    rows=10,\n",
+    "    options = xdffiles + rawfiles,  # Available file options\n",
+    "    value = None, # xdffiles[0] if xdffiles else None,  # Default selection (first .xdf file if available)\n",
+    "    description = 'File:',\n",
+    "    disabled = False,\n",
+    "    rows = 10,\n",
     ")\n",
     "\n",
     "# Function to preprocess ECG data\n",
@@ -260,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -279,7 +294,36 @@
      }
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d0dfc94bfc2d4f0ba9b10a811ef4e933",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Select(description='File:', options=('SUB_002.xdf', 'SUB_013.xdf', 'SUB_022.xdf', 'POLARDATA.txt'), rows=10, v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5f341bac246543588d0163231b7233d8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(fileselector)\n",
     "display(myApp)"
@@ -289,7 +333,23 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dbc01754-27fd-4c3c-a7c2-3fcb53b84b91",
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "activeView": "grid_default",
+      "views": {
+       "grid_default": {
+        "col": null,
+        "height": 2,
+        "hidden": true,
+        "locked": true,
+        "row": null,
+        "width": 2
+       }
+      }
+     }
+    }
+   },
    "outputs": [],
    "source": []
   }
