--- a/spectHR/notebooks/SpectHR.ipynb
+++ b/spectHR/notebooks/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -82,22 +82,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4754250244984e838106c009f6b48b8a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spectHR as cs\n",
     "# include matplotlib **only** to set the style\n",
@@ -137,12 +122,15 @@
     "\n",
     "Data that can be loaded are for now restricted to the [`xdf`](https://github.com/sccn/xdf) type used by [`labstreaminglayer`](https://labstreaminglayer.readthedocs.io/info/intro.html). The data tested are all recorded using the [`labrecorder`](https://github.com/labstreaminglayer/App-LabRecorder/releases), and streamed with the [`polarGUI`](https://github.com/markspan/PolarBand2lsl/releases/tag/v1.0.0) utility that streams data from the Polar H10 Band. Markers should be a seperate stream, with start- and stop markers. In the demo they are streamed through python inline code in [`opensesame`](https://osdoc.cogsci.nl/4.0/download). \n",
     "\n",
-    "The call to `borderData` cuts the data from 1 second before the first marker, to one second after the last marker. To do any meaningfull analysis, the call to `calcPeaks` is mandatory: it attaches the DataFrame 'RTops' to hte DataSet. \n"
+    "The call to `borderData` cuts the data from 1 second before the first marker, to one second after the last marker. To do any meaningfull analysis, the call to `calcPeaks` is mandatory: it attaches the DataFrame 'RTops' to hte DataSet. \n",
+    "\n",
+    "The code below creates a fileselector that shows all the .xdf nd all the .txt files in the current directory (minus TODO.txt). Selecting one will show the dataset as is now is: changes (edits) should be reflected immideately. If you want to continue editing later, this should be automatic. If you want to re-read the data you can opt to delete the pickle file from the cache directort, or change the `reset = False` to true in the preProc function below.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -165,48 +153,83 @@
    "source": [
     "import ipywidgets as widgets\n",
     "import glob\n",
+    "import spectHR as cs  \n",
+    "from IPython.display import display\n",
     "\n",
-    "xdffiles = glob.glob(\"*.xdf\")\n",
-    "rawfiles = glob.glob(\"*.txt\")\n",
+    "# Retrieve lists of available files\n",
+    "xdffiles = glob.glob(\"*.xdf\")  # List all .xdf files\n",
+    "rawfiles = glob.glob(\"*.txt\")  # List all .txt files\n",
     "\n",
+    "# Exclude specific files that should not be processed\n",
     "if \"TODO.txt\" in rawfiles:\n",
     "    rawfiles.remove(\"TODO.txt\")\n",
     "\n",
+    "# Create a file selection widget\n",
     "fileselector = widgets.Select(\n",
-    "    options = xdffiles + rawfiles,\n",
-    "    value=xdffiles[0],\n",
-    "    description='File:',\n",
-    "    disabled=False,\n",
-    "    rows=10,\n",
+    "    options = xdffiles + rawfiles,  # Available file options\n",
+    "    value = None, # xdffiles[0] if xdffiles else None,  # Default selection (first .xdf file if available)\n",
+    "    description = 'File:',\n",
+    "    disabled = False,\n",
+    "    rows = 10,\n",
     ")\n",
     "\n",
-    "def preProc(name):\n",
-    "    data = cs.SpectHRDataset(name , reset = False, flip = 'auto')\n",
-    "    data.ecg = data.ecg.slicetime(4, 1000000)\n",
-    "    data = cs.borderData(data)\n",
-    "    data = cs.filterECGData(data, {\"filterType\": \"highpass\", \"cutoff\": 1})\n",
-    "    return data\n",
-    "    \n",
+    "# Function to preprocess ECG data\n",
+    "def preprocess_data(file_name):\n",
+    "    \"\"\"\n",
+    "    Load and preprocess ECG data from the selected file.\n",
+    "    Steps:\n",
+    "    1. Load dataset with SpectHRDataset.\n",
+    "    2. Slice ECG time series (from 4s to 1000000s).\n",
+    "    3. Apply border correction.\n",
+    "    4. Apply high-pass filter (cutoff = 1 Hz).\n",
+    "    \"\"\"\n",
+    "    dataset = cs.SpectHRDataset(file_name, reset=False, flip='auto')\n",
+    "    dataset.ecg = dataset.ecg.slicetime(4, 1000000)\n",
+    "    dataset = cs.borderData(dataset)\n",
+    "    dataset = cs.filterECGData(dataset, {\"filterType\": \"highpass\", \"cutoff\": 1})\n",
+    "    return dataset\n",
+    "\n",
+    "# Output widget to display the application interface\n",
     "myApp = widgets.Output()\n",
-    "dataSet = {name: preProc(name) for name in xdffiles + rawfiles} \n",
     "\n",
-    "DataSet = dataSet[xdffiles[0]]\n",
+    "# Dictionary to store preprocessed datasets\n",
+    "data_store = {name: preprocess_data(name) for name in xdffiles + rawfiles}\n",
     "\n",
+    "# Default dataset selection\n",
+    "DataSet = data_store[fileselector.value] if fileselector.value else None\n",
+    "\n",
+    "# Event handler for file selection change\n",
     "def on_file_change(change):\n",
+    "    \"\"\"\n",
+    "    Handle changes in the file selection widget.\n",
+    "    Steps:\n",
+    "    1. Save the current dataset state.\n",
+    "    2. Update DataSet to the new selection.\n",
+    "    3. If peak data (RTops) is missing, compute peaks.\n",
+    "    4. Refresh and display the HRV analysis app.\n",
+    "    \"\"\"\n",
     "    global DataSet\n",
     "    if change['type'] == 'change' and change['name'] == 'value':\n",
-    "        dataSet[change['old']] = DataSet\n",
-    "        name = change['new']\n",
-    "        DataSet = dataSet[name]\n",
-    "    \n",
+    "        old_file = change['old']\n",
+    "        new_file = change['new']\n",
+    "        \n",
+    "        # Save the state of the previous dataset\n",
+    "        data_store[old_file] = DataSet\n",
+    "        \n",
+    "        # Load new dataset\n",
+    "        DataSet = data_store[new_file]\n",
+    "        \n",
+    "        # Compute peaks if not already calculated\n",
     "        if not hasattr(DataSet, 'RTops'):\n",
     "            DataSet = cs.calcPeaks(DataSet)\n",
-    "            \n",
+    "        \n",
+    "        # Display the HRV app\n",
     "        with myApp:\n",
     "            myApp.clear_output()\n",
     "            display(cs.HRApp(DataSet))\n",
     "\n",
-    "fileselector.observe(on_file_change, names='value')"
+    "# Attach event listener to file selection widget\n",
+    "fileselector.observe(on_file_change, names='value')\n"
    ]
   },
   {
@@ -237,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -256,36 +279,7 @@
      }
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f98852d32a5a468d8ea62a43a3d34132",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Select(description='File:', options=('SUB_002.xdf', 'SUB_013.xdf', 'SUB_022.xdf', 'POLARDATA.txt'), rows=10, v…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a6df767fea24a5e83fbbee927295907",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(fileselector)\n",
     "display(myApp)"
@@ -295,7 +289,23 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dbc01754-27fd-4c3c-a7c2-3fcb53b84b91",
-   "metadata": {},
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "activeView": "grid_default",
+      "views": {
+       "grid_default": {
+        "col": null,
+        "height": 2,
+        "hidden": true,
+        "locked": true,
+        "row": null,
+        "width": 2
+       }
+      }
+     }
+    }
+   },
    "outputs": [],
    "source": []
   }
