--- a/SpectHR.ipynb
+++ b/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f58db4a1e51a4b0480caeaaa3c9da387",
+       "model_id": "3b19b37a1b6647deb100f67992486724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -201,9 +201,9 @@
     "    4. Apply high-pass filter (cutoff = 1 Hz).\n",
     "    \"\"\"\n",
     "    dataset = cs.SpectHRDataset(file_name, reset=False, flip='auto')\n",
-    "    #dataset.ecg = dataset.ecg.slicetime(400, 800)\n",
-    "    #dataset = cs.borderData(dataset)\n",
-    "    dataset = cs.filterECGData(dataset, {\"filterType\": \"highpass\", \"cutoff\": 6})\n",
+    "    dataset.ecg = dataset.ecg.slicetime(80, 8000)\n",
+    "    dataset = cs.borderData(dataset)\n",
+    "    dataset = cs.filterECGData(dataset, {\"filterType\": \"highpass\", \"cutoff\": 1})\n",
     "    return dataset\n",
     "\n",
     "# Output widget to display the application interface\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -300,7 +300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0915b834494844528db90d862bc8d8b5",
+       "model_id": "412460a3fd7144d2a144f2b6b1baa2dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a84d70dace8e4c51b82e41292f152bf7",
+       "model_id": "ac696d2fce464d43b9dc78983f733013",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "id": "26de5863-76b7-4605-9e1e-af74d98ffe34",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "id": "d517b34a-0543-418f-af30-31068858f4f5",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "d47201bc-3684-4126-b076-feb7603fd3ec",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "250"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "ad7f9c41-af7e-4267-b981-e1ee6cf63e63",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "Length: 266301, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
