--- a/SpectHR.ipynb
+++ b/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -84,9 +84,106 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "A module that was compiled using NumPy 1.x cannot be run in\n",
+      "NumPy 2.2.3 as it may crash. To support both 1.x and 2.x\n",
+      "versions of NumPy, modules must be compiled with NumPy 2.0.\n",
+      "Some module may need to rebuild instead e.g. with 'pybind11>=2.12'.\n",
+      "\n",
+      "If you are a user of the module, the easiest solution will be to\n",
+      "downgrade to 'numpy<2' or try to upgrade the affected module.\n",
+      "We expect that some modules will need time to support NumPy 2.\n",
+      "\n",
+      "Traceback (most recent call last):  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\runpy.py\", line 198, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\runpy.py\", line 88, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel_launcher.py\", line 18, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\traitlets\\config\\application.py\", line 1075, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\kernelapp.py\", line 739, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\tornado\\platform\\asyncio.py\", line 205, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\asyncio\\base_events.py\", line 641, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\asyncio\\base_events.py\", line 1987, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\asyncio\\events.py\", line 88, in _run\n",
+      "    self._context.run(self._callback, *self._args)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\kernelbase.py\", line 545, in dispatch_queue\n",
+      "    await self.process_one()\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\kernelbase.py\", line 534, in process_one\n",
+      "    await dispatch(*args)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\kernelbase.py\", line 437, in dispatch_shell\n",
+      "    await result\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\ipkernel.py\", line 362, in execute_request\n",
+      "    await super().execute_request(stream, ident, parent)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\kernelbase.py\", line 778, in execute_request\n",
+      "    reply_content = await reply_content\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\ipkernel.py\", line 449, in do_execute\n",
+      "    res = shell.run_cell(\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\ipykernel\\zmqshell.py\", line 549, in run_cell\n",
+      "    return super().run_cell(*args, **kwargs)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3075, in run_cell\n",
+      "    result = self._run_cell(\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3130, in _run_cell\n",
+      "    result = runner(coro)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\IPython\\core\\async_helpers.py\", line 128, in _pseudo_sync_runner\n",
+      "    coro.send(None)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3334, in run_cell_async\n",
+      "    has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3517, in run_ast_nodes\n",
+      "    if await self.run_code(code, result, async_=asy):\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3577, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\Temp\\ipykernel_19324\\157158933.py\", line 1, in <module>\n",
+      "    import spectHR as cs\n",
+      "  File \"C:\\Users\\P154492\\Documents\\GitHub\\spectHR\\spectHR\\__init__.py\", line 2, in <module>\n",
+      "    from spectHR.Plots.prepPlot import prepPlot\n",
+      "  File \"C:\\Users\\P154492\\Documents\\GitHub\\spectHR\\spectHR\\Plots\\prepPlot.py\", line 16, in <module>\n",
+      "    import pandas as pd\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\__init__.py\", line 62, in <module>\n",
+      "    from pandas.core.api import (\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\core\\api.py\", line 28, in <module>\n",
+      "    from pandas.core.arrays import Categorical\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\core\\arrays\\__init__.py\", line 1, in <module>\n",
+      "    from pandas.core.arrays.arrow import ArrowExtensionArray\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\core\\arrays\\arrow\\__init__.py\", line 5, in <module>\n",
+      "    from pandas.core.arrays.arrow.array import ArrowExtensionArray\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\core\\arrays\\arrow\\array.py\", line 64, in <module>\n",
+      "    from pandas.core.arrays.masked import BaseMaskedArray\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py\", line 60, in <module>\n",
+      "    from pandas.core import (\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\core\\nanops.py\", line 52, in <module>\n",
+      "    bn = import_optional_dependency(\"bottleneck\", errors=\"warn\")\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\pandas\\compat\\_optional.py\", line 135, in import_optional_dependency\n",
+      "    module = importlib.import_module(name)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\importlib\\__init__.py\", line 90, in import_module\n",
+      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
+      "  File \"C:\\Users\\P154492\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\bottleneck\\__init__.py\", line 7, in <module>\n",
+      "    from .move import (move_argmax, move_argmin, move_max, move_mean, move_median,\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "\nA module that was compiled using NumPy 1.x cannot be run in\nNumPy 2.2.3 as it may crash. To support both 1.x and 2.x\nversions of NumPy, modules must be compiled with NumPy 2.0.\nSome module may need to rebuild instead e.g. with 'pybind11>=2.12'.\n\nIf you are a user of the module, the easiest solution will be to\ndowngrade to 'numpy<2' or try to upgrade the affected module.\nWe expect that some modules will need time to support NumPy 2.\n\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[1;32m~\\AppData\\Local\\anaconda3\\envs\\Start\\Lib\\site-packages\\numpy\\core\\_multiarray_umath.py:44\u001b[0m, in \u001b[0;36m__getattr__\u001b[1;34m(attr_name)\u001b[0m\n\u001b[0;32m     39\u001b[0m     \u001b[38;5;66;03m# Also print the message (with traceback).  This is because old versions\u001b[39;00m\n\u001b[0;32m     40\u001b[0m     \u001b[38;5;66;03m# of NumPy unfortunately set up the import to replace (and hide) the\u001b[39;00m\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;66;03m# error.  The traceback shouldn't be needed, but e.g. pytest plugins\u001b[39;00m\n\u001b[0;32m     42\u001b[0m     \u001b[38;5;66;03m# seem to swallow it and we should be failing anyway...\u001b[39;00m\n\u001b[0;32m     43\u001b[0m     sys\u001b[38;5;241m.\u001b[39mstderr\u001b[38;5;241m.\u001b[39mwrite(msg \u001b[38;5;241m+\u001b[39m tb_msg)\n\u001b[1;32m---> 44\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(msg)\n\u001b[0;32m     46\u001b[0m ret \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(_multiarray_umath, attr_name, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ret \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[1;31mImportError\u001b[0m: \nA module that was compiled using NumPy 1.x cannot be run in\nNumPy 2.2.3 as it may crash. To support both 1.x and 2.x\nversions of NumPy, modules must be compiled with NumPy 2.0.\nSome module may need to rebuild instead e.g. with 'pybind11>=2.12'.\n\nIf you are a user of the module, the easiest solution will be to\ndowngrade to 'numpy<2' or try to upgrade the affected module.\nWe expect that some modules will need time to support NumPy 2.\n\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fb41a67787d4dc18e642a0088f0ac7e",
+       "model_id": "f64b778c2f4d4d5d8ab8a55796f1beef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -277,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -300,7 +397,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b2a94ce5bb34feb9bbf5b20e713b794",
+       "model_id": "6b64e04237af48888cd0f78bd08793fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,7 +411,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d399f673fa434a71bd1c07f1fbf38b1c",
+       "model_id": "b1deb4f8e3b04345a385bb0e59726c04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "26de5863-76b7-4605-9e1e-af74d98ffe34",
    "metadata": {},
    "outputs": [
@@ -341,7 +438,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Magic is 0.6791066461870563\n"
+      "Magic is 0.6791066527366638\n"
      ]
     }
    ],
@@ -352,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d517b34a-0543-418f-af30-31068858f4f5",
    "metadata": {},
    "outputs": [],
@@ -362,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d47201bc-3684-4126-b076-feb7603fd3ec",
    "metadata": {},
    "outputs": [
@@ -372,7 +469,7 @@
        "250"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,9 +536,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -453,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
