--- a/SpectHR.ipynb
+++ b/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcc8b23d9c874bbab1a522590bcec36e",
+       "model_id": "852be3e80efb413c90f31d5a17f35984",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -200,9 +200,9 @@
     "    3. Apply border correction.\n",
     "    4. Apply high-pass filter (cutoff = 1 Hz).\n",
     "    \"\"\"\n",
-    "    dataset = cs.SpectHRDataset(file_name, reset=False, flip='auto')\n",
-    "    dataset.ecg = dataset.ecg.slicetime(80, 8000)\n",
-    "    dataset = cs.borderData(dataset)\n",
+    "    dataset = cs.SpectHRDataset(file_name, reset=True, flip='auto')\n",
+    "    # dataset.ecg = dataset.ecg.slicetime(80, 8000)\n",
+    "    # dataset = cs.borderData(dataset)\n",
     "    dataset = cs.filterECGData(dataset, {\"filterType\": \"highpass\", \"cutoff\": 1})\n",
     "    return dataset\n",
     "\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -300,12 +300,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52c6372d27ff4df5a420a90fa60e7e0f",
+       "model_id": "80de845c9b0947c4bdc1d76479364bb8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Select(description='File:', options=('SUB_002.xdf', 'SUB_013.xdf', 'SUB_022.xdf', 'POLARDATA.txt', 'Data._csv'…"
+       "Select(description='File:', options=('sub - Copy.xdf', 'sub.xdf', 'SUB_003.xdf'), rows=10, value='sub - Copy.x…"
       ]
      },
      "metadata": {},
@@ -314,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd968ffa8c5a4e7e9f706aa22dba159d",
+       "model_id": "1f336b6d705f4f52a4ce0eef68d25f7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,6 +330,30 @@
     "display(fileselector)\n",
     "display(myApp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c66a252-57eb-477e-9965-cf12e0877a56",
+   "metadata": {
+    "extensions": {
+     "jupyter_dashboards": {
+      "activeView": "grid_default",
+      "views": {
+       "grid_default": {
+        "col": null,
+        "height": 2,
+        "hidden": true,
+        "locked": true,
+        "row": null,
+        "width": 2
+       }
+      }
+     }
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -349,9 +373,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
