--- a/SpectHR.ipynb
+++ b/SpectHR.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca7c5ccbcfb24a73ad5f0dffa9bd7723",
+       "model_id": "53328a529a9a4e61938c535bdfc8048e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,12 +300,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34b164844df54ab6b3bca162f809321b",
+       "model_id": "5b78c3479bc545189d4a90241dc25e8b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Select(description='File:', options=('sub - Copy.xdf', 'sub.xdf', 'SUB_003.xdf'), rows=10, value='sub - Copy.x…"
+       "Select(description='File:', options=('sub001.xdf', 'sub002.xdf'), rows=10, value='sub001.xdf')"
       ]
      },
      "metadata": {},
@@ -314,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "480d4e1618ba475fabf15c3c9dda92f6",
+       "model_id": "8221f7cf53f54630b37934873e9df96b",
        "version_major": 2,
        "version_minor": 0
       },
