clean, stop instead of end...

--- a/SpectHR.ipynb
+++ b/SpectHR.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "608e45cb-3487-4150-b1b9-801e6a4362a7",
    "metadata": {
     "editable": true,
@@ -86,7 +86,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53328a529a9a4e61938c535bdfc8048e",
+       "model_id": "b1562bedae394a5cac937a0e7cc6def4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f5cbc7fb-e9eb-49bb-a572-6a48029ccf86",
    "metadata": {
     "extensions": {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9a424636-5650-4ded-953e-80ec2ddcc111",
    "metadata": {
     "extensions": {
@@ -300,12 +300,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b78c3479bc545189d4a90241dc25e8b",
+       "model_id": "e245952c6bdc48c8b9a85eaebfb1481e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Select(description='File:', options=('sub001.xdf', 'sub002.xdf'), rows=10, value='sub001.xdf')"
+       "Select(description='File:', options=('sub001.xdf', 'sub002.xdf', 'ThreePhasesHeartrateBreating.xdf'), rows=10,…"
       ]
      },
      "metadata": {},
@@ -314,7 +314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8221f7cf53f54630b37934873e9df96b",
+       "model_id": "628bc16e6d6d40fe877af0df807721e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,9 +373,9 @@
    }
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
